--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: python-container
-          image: myacrunique1.azurecr.io/python-sample-app:$(Build.BuildId)
+          image: myacrramraja.azurecr.io/python-sample-app:21
           ports:
             - containerPort: 80
